istio/ambient/ingressgateway/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    istio.io/use-waypoint: simple-http-waypoint
    istio.io/use-waypoint-namespace: default
    # Uncomment following to use waypoint
    # istio.io/ingress-use-waypoint: "true" 
    app: httpbin
    service: httpbin
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/componentLogLevel: filter:trace,misc:error
        sidecar.istio.io/proxyImage: docker.io/istio/proxyv2:1.24.3
      labels:
        app: httpbin
        version: v1
        role: httpbin
    spec:
      # nodeSelector:
      #   kubernetes.io/hostname: envoy-gateway-worker2
      serviceAccountName: httpbin
      containers:
        - image: docker.io/mccutchen/go-httpbin:v2.15.0
          imagePullPolicy: IfNotPresent
          name: httpbin
          ports:
            - containerPort: 8080
